<resources>
    <string name="app_name">AdminWave of Food</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="create_account">Create Account</string>
    <string name="resturant_of_name">Resturant Of Name</string>
    <string name="email_or_phone_number">Email Or Phone Number</string>
    <string name="choose_location">Choose Location</string>
    <string name="name_of_owner">Name Of Owner</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="sign_up_here_for_your_nadmin_dashboard">Sign Up Here For Your\nAdmin Dashboard</string>
    <string name="design_by_n_nasir_akram">Design By\n Nasir Akram</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="_30">30</string>
    <string name="price_30">30$</string>
    <string name="add_menu">Add Menu</string>
    <string name="log_out">Log Out</string>
    <string name="order_dispatch">Order Dispatch</string>
    <string name="create_new_user">Create New User</string>
    <string name="profile">Profile</string>
    <string name="all_item_menu">All Item Menu</string>
    <string name="todo">TODO</string>
    <string name="completed_norder">Completed\norder</string>
    <string name="_304">30</string>
    <string name="whole_time_nearning">Whole Time\nEarning</string>
    <string name="waves">Waves Of Food</string>
    <string name="pending_order">Pending Order</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="enter_food_price">Enter Food Price</string>
    <string name="noodle_salad_nburger_harbal_npan_cake_nmomos">Noodle Salad\nBurger harbal\nPan Cake\nMomos</string>
    <string name="select_image">Select Image</string>
    <string name="short_description">Short Description</string>
    <string name="short_descriptions">Short Description</string>
    <string name="add_item">Add Item</string>
    <string name="_35">$ 35</string>
    <string name="all_item">All Item</string>
    <string name="customer_name">Customer Name</string>
    <string name="payment">Payment</string>
    <string name="not_received">Not Received</string>
    <string name="delivery">Delivery</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="Email">Email</string>
    <string name="phone">Phone</string>
    <string name="Password">Password</string>
    <string name="save_information">Save Information</string>
    <string name="textviewbdshdvashgvzghxcgahxcahgxcasghasghdcvasghcdagscdgascdaghcdgahcdag">This edit text is used for address of the user in this project Enter your correct address and verify all information</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="textview">Textview</string>
    <string name="WebclientID">707051994428-qi9nlk8su6qq0ir93rdr6762ek24khm4.apps.googleusercontent.com</string>

</resources>