<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeonsung_regular"
        android:text="Waves Of Food"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="Login To Your\nAdmin Dashboard"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="2dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="@color/textColor"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="RtlSymmetry,UnusedAttribute,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="2dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/textColor"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,TextFields,UnusedAttribute,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="Or\nContinue With"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GoogleButton"
        android:layout_width="125dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/google"
        android:outlineAmbientShadowColor="@color/textColor"
        android:paddingLeft="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/FacebookButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/FacebookButton"
        android:layout_width="125dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/facebook"
        android:outlineAmbientShadowColor="@color/textColor"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/GoogleButton"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginButton"
        android:layout_width="125dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/greenbuttonshape"
        android:fontFamily="@font/yeonsung_regular"
        android:outlineAmbientShadowColor="@color/textColor"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/FacebookButton"
        app:layout_constraintStart_toStartOf="@+id/GoogleButton"
        app:layout_constraintTop_toBottomOf="@+id/GoogleButton"
        tools:ignore="UnusedAttribute,TextContrastCheck" />

    <TextView
        android:id="@+id/dontHaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/don_t_have_account"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/LoginButton"
        app:layout_constraintStart_toStartOf="@+id/LoginButton"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/design_by_n_nasir_akram"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dontHaveButton"
        app:layout_constraintStart_toStartOf="@+id/dontHaveButton"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveButton"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>